--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,26 @@ body {
   font-family: 'Lato', sans-serif;
   color: #040000;
 }
+.whatsapp-icon {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: #25D366; /* WhatsApp Green */
+    color: white;
+    border-radius: 50%;
+    padding: 15px;
+    font-size: 24px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.whatsapp-icon i {
+    margin: 0;
+}
+
+.whatsapp-icon:hover {
+    background-color: #128C7E; /* Darker Green for Hover */
+}
 
 .layout_padding {
   padding-top: 120px;
